@@ -1,3 +1,7 @@
+2015-12-04  Carl Hetherington  <cth@carlh.net>
+
+	* Fix non-functional send-problem-report.
+
 2015-12-03  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.6.2 released.
